fix(compose): don't overflow textarea's container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,11 +94,14 @@ body {
 }
 
 .nav__compose {
-
+  font-size: 20px;
+  color: darkred;
+  margin-left: 10px;
 }
 
 .compose__text {
   width: 100%;
+  box-sizing: border-box;
   display: block;
   resize: vertical;
 }
